# EunshinBishop

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml  release.yml
docs/: ABResults.md  ABTesting.md  Architecture.md  Build.md  CIVerificationChecklist.md  Checkpoint2_Report.md  Checkpoint3_Report.md  Checkpoint6_Report.md  Checkpoint7_Report.md  Checkpoint9_Report.md  ClassicalEvalBacklog.md  Migration.md  Q0_Reference.md  ReleaseNotes_v5.0.0-rc.1_draft.md  Testing.md  UCI.md  index.html  main-i18n.js  script.js  style.css
docs/EunshinBishop_Complete_Website_With_Playroom_v2/: INTEGRATION.md
docs/EunshinBishop_Complete_Website_With_Playroom_v2/docs/: script.js  style.css
docs/EunshinBishop_Complete_Website_With_Playroom_v2/docs/play/: play.css
docs/docs/: ABResults.md  Architecture.md  Build.md  CIVerificationChecklist.md  Checkpoint4_Report.md  Checkpoint5_Report.md  Checkpoint6_Report.md  Checkpoint8_Report.md  FinalAuditRemediation.md  Migration.md  ReleaseNotes_v5.0.0-rc.1_draft.md  TestReport.md  index.html  script.js  style.css
docs/docs/play/: index.html
docs/play/: README.md  engine-worker.js  i18n.js  index.html  play.js  wasm-adapter.js
docs/play/engine/: README.md  eunshinbishop.js  eunshinbishop.wasm
networks/: PROVENANCE.md  README.md
reference/: README.md
reference/ab_tests/checkpoint6_architecture_regression/: MANIFEST.md  architecture_regression.pgn  openings_v1.epd
reference/ab_tests/checkpoint7_root_cause/: classical_only_isolation.pgn  eval_comparison_startpos_kiwipete.txt  openings_v1_first6.epd  perft6_speed_comparison.txt  search_speed_comparison_kiwipete.txt
reference/ab_tests/checkpoint8_perf/: after_binaries.sha256  after_perft6_benchmark.txt  before_binaries.sha256  before_commit.txt  before_perft6_benchmark.txt
reference/ab_tests/checkpoint8_perf/profiler/: profperft_raw_output.txt  tools_profperft.cpp
reference/ab_tests/checkpoint9_release_gate/: paired_ab_6games.pgn  summary.json
reference/checkpoint2/: README.md  SHA256SUMS
reference/checkpoint3/: README.md  SHA256SUMS
reference/checkpoint4/: README.md  SHA256SUMS
reference/checkpoint5/: README.md  SHA256SUMS
reference/source/: SniperBishop_v2.62_Phase5_FIRSTNET_v5.cpp
src/: main.cpp
src/core/: attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  move.h  nnue_state.h  random.cpp  random.h  types.h  version.h  zobrist.cpp  zobrist.h
src/engine/: engine.cpp  engine.h  options.cpp  options.h
src/eval/: classical.cpp  classical.h  evaluator.cpp  evaluator.h  score.h
src/eval/nnue/: network.cpp  network.h
src/position/: fen.cpp  fen.h  movegen.cpp  movegen.h  position.cpp  position.h  state.h
src/search/: aegis.cpp  aegis.h  history.cpp  history.h  limbo.cpp  limbo.h  move_picker.cpp  move_picker.h  search.cpp  search.h  search_config.h  search_stack.h  see.cpp  see.h  time_manager.cpp  time_manager.h  tt.cpp  tt.h  worker.cpp  worker.h
src/uci/: uci.cpp  uci.h
src/web/: wasm_api.cpp
tests/: core_tests.cpp  integration_tests.cpp
